# chaostoolkit-opentracing

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  ci.bash  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-and-test.yaml  check-pr.yaml  release.yaml
chaostracing/: __init__.py  control.py  metrics.py  oltp.py
tests/: conftest.py  test_control.py
